src/objects/TwilioConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Twilio App Config</description>
    <fields>
        <fullName>AccountSid__c</fullName>
        <label>AccountSid</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationSid__c</fullName>
        <label>ApplicationSid</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <label>AuthToken</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultFrom__c</fullName>
        <description>The default From Number for your Twilio Messages</description>
        <label>DefaultFrom</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ForceSiteUrl__c</fullName>
        <description>The base url for your Force.com Site that will respond with TwiML</description>
        <label>ForceSiteUrl</label>
        <type>Url</type>
    </fields>
    <label>Twilio Config</label>
</CustomObject>